# affinity-model-python

./: README.md  devenv.nix  pyproject.toml
.github/workflows/: test.yml
affinity_model/: .gitattributes  __init__.py
spec/: .gitattributes  v2_spec.json  v2_spec.patch
