[project]
name = "affinity-model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
dynamic = ["authors", "classifiers", "version", "description"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.28.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
]

[tool.black]
include = '.*py$'
